# jizifin

./: .gitignore  AGENTS.md  Caddyfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  finance.db  pyproject.toml
backend/app/: __init__.py  crypto_utils.py  database.py  main.py  models.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: AnalyticsSummary.svelte  BudgetManager.svelte  ExpenseForm.svelte  ExpenseList.svelte  IncomeChart.svelte  IncomeTab.svelte  JointAccountTab.svelte  Login.svelte  PaybackVisual.svelte  ProjectsTab.svelte  QueryConsole.svelte  RealtimeChart.svelte  RecurringManager.svelte  SplitManager.svelte  TagsTab.svelte  UserManager.svelte  api.js  crypto.js  stores.js
frontend/src/test/: api.test.js  crypto.test.js  setup.js
frontend/src/test/components/: AnalyticsSummary.test.js  App.test.js  BudgetManager.test.js  ExpenseForm.test.js  ExpenseList.test.js  IncomeChart.test.js  IncomeTab.test.js  JointAccountTab.test.js  Login.test.js  PaybackVisual.test.js  ProjectsTab.test.js  QueryConsole.test.js  RealtimeChart.test.js  RecurringManager.test.js  SplitManager.test.js  TagsTab.test.js  UserManager.test.js
